--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,4 +1,9 @@
 {
   "percentageCalculator": "Calculadora de Porcentagem",
-  "typeNumber": "Digite um número"
+  "typeNumber": "Digite um número",
+  "xis": "X é",
+  "x": "X %",
+  "ofx": "de X",
+  "iss": "é",
+  "percentOf": "% de"
 }
