chore: improved math calc

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,5 +26,9 @@
   "percentOf": "% of",
   "@percentOf": {
     "description": "percent of"
+  },
+  "cleanSome": "Clean some field do make the math",
+  "@cleanSome": {
+    "description": "Clean some field do make the math"
   }
 }
