--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -5,5 +5,6 @@
   "x": "X %",
   "ofx": "de X",
   "iss": "é",
-  "percentOf": "% de"
+  "percentOf": "% de",
+  "cleanSome": "Limpe algum campo para fazer a conta"
 }
